# lacam3

./: .clang-format  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  LICENCE.txt  README.md  app.12e55704.js  app.12e55704.js.map  app.26836608.js  app.26836608.js.map  app.2e1800de.css  app.2e1800de.css.map  app.49af6d39.js  app.49af6d39.js.map  app.6251d6fa.js  app.6251d6fa.js.map  app.95b86233.js  app.95b86233.js.map  app.e0729d6d.js  app.e0729d6d.js.map  data.yaml  demo.ipynb  demo.py  index.html  main.cpp  package.json
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
bindings/: CMakeLists.txt  pybind.cpp
lacam3/: CMakeLists.txt
lacam3/include/: collision_table.hpp  dist_table.hpp  graph.hpp  heuristic.hpp  hnode.hpp  instance.hpp  lacam.hpp  lnode.hpp  metrics.hpp  pibt.hpp  planner.hpp  post_processing.hpp  refiner.hpp  scatter.hpp  sipp.hpp  translator.hpp  utils.hpp
lacam3/src/: collision_table.cpp  dist_table.cpp  graph.cpp  heuristic.cpp  hnode.cpp  instance.cpp  lacam.cpp  lnode.cpp  metrics.cpp  pibt.cpp  planner.cpp  post_processing.cpp  refiner.cpp  scatter.cpp  sipp.cpp  translator.cpp  utils.cpp
scripts/: .gitignore  Project.toml  README.md  eval.jl  setup.sh
scripts/config/: mapf-bench.yaml
scripts/config/exp_10k/: common.yaml  lacam3-no-random.yaml  lacam3-no-scatter.yaml  lacam3-pibt200.yaml  lacam3-scatter-250.yaml  lacam3-single-refiner.yaml  lacam3.yaml
scripts/config/exp_ablation/: all.yaml  common.yaml  drop-all-refiner.yaml  drop-mccg.yaml  drop-random.yaml  drop-suo.yaml
scripts/config/exp_all/: baseline.yaml  common.yaml  lacam3.yaml  recursive.yaml
scripts/config/exp_ir/: baseline.yaml  common.yaml  refiner-1.yaml  refiner-4.yaml
scripts/config/exp_mccg/: baseline.yaml  common.yaml  parallel-10.yaml  parallel-100.yaml  parallel-20.yaml  seq-10.yaml  seq-100.yaml
scripts/map/: Berlin_1_256.map  connector.map  corners.map  loop-chain.map  random-8-8-20.map  string.map  tree.map  tunnel.map
src/: index.html
src/images/: overview.pptx
src/scss/: custom.scss
src/ts/: app.tsx
tests/: test_dist_table.cpp  test_graph.cpp  test_instance.cpp  test_planner.cpp  test_post_processing.cpp  test_sipp.cpp
tests/assets/: 2x1.map  2x1.scen  sapp.map  sapp.scen  sapp2.map  sapp2.scen
(+24 files in other folders)
